Simplify code by using Set.of
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>